# mordor

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.am  README  README.md  cmakeconfig.h.in  configure.ac  linux.supp  lucid.suppressions  mordor.sln  mordor2010.sln  mordor_cmake.vcxproj  osx.supp  valgrind.supp  vmake
buildtools/: build-cmake.sh  (+12 more)
mordor/: .gitignore  CMakeLists.txt  Makefile.am  anymap.h  assert.cpp  assert.h  atomic.h  config.cpp  config.h  coroutine.h  cxa_exception.cpp  cxa_exception.h  daemon.cpp  daemon.h  date_time.cpp  date_time.h  endian.h  eventloop.cpp  eventloop.h  exception.cpp  exception.h  factory.h  fiber.cpp  fiber.h  fiber_amd64_underscore.s  fibersynchronization.cpp  fibersynchronization.h  future.h  iomanager.h  iomanager_epoll.cpp  iomanager_epoll.h  iomanager_event.cpp  iomanager_event.h  iomanager_iocp.cpp  iomanager_iocp.h  iomanager_kqueue.cpp  iomanager_kqueue.h  json.h  json.rl  libmordor.pc.in  (+83 more)
mordor/common/: .gitignore  assert.h  atomic.h  comlike.cpp  comlike.h  common.vcproj  config.cpp  config.h  coroutine.h  endian.h  exception.cpp  exception.h  fiber.cpp  fiber.h  fiberX86.s  fiberX86_64.s  fiberX86_64_windows.asm  fiberX86_underscore.s  fiber_amd64.s  fiber_amd64_underscore.s  fiber_tests.cpp  iomanager.h  iomanager_epoll.cpp  iomanager_epoll.h  iomanager_iocp.cpp  iomanager_iocp.h  iomanager_kqueue.cpp  iomanager_kqueue.h  log.cpp  log.h  masm64.rules  pch.cpp  pch.h  ragel.cpp  ragel.h  runtime_linking.cpp  runtime_linking.h  scheduler.cpp  scheduler.h  semaphore.cpp  (+12 more)
mordor/common/examples/: .gitignore  cat.cpp  cat.vcproj  echoserver.cpp  echoserver.vcproj  fiber_tests.cpp  fibers.cpp  fibers.vcproj  pch.cpp  simpleclient.cpp  simpleclient.vcproj  tunnel.cpp  tunnel.vcproj  wget.cpp  wget.vcproj
mordor/common/http/: auth.cpp  auth.h  basic.cpp  basic.h  chunked.cpp  chunked.h  client.cpp  client.h  connection.cpp  connection.h  digest.cpp  digest.h  http.cpp  http.h  multipart.cpp  multipart.h  negotiate.cpp  negotiate.h  oauth.cpp  oauth.h  parser.h  parser.rl  server.cpp  server.h  tunnel.h
mordor/common/streams/: buffer.cpp  buffer.h  buffered.cpp  buffered.h  deflate.h  duplex.h  efs.cpp  efs.h  fd.cpp  fd.h  file.cpp  file.h  filter.h  gzip.h  handle.cpp  handle.h  hash.cpp  hash.h  limited.cpp  limited.h  memory.cpp  memory.h  namedpipe.cpp  namedpipe.h  notify.h  null.cpp  null.h  openssl.cpp  openssl.h  pipe.cpp  pipe.h  singleplex.h  socket.cpp  socket.h  ssl.cpp  ssl.h  std.cpp  std.h  stream.cpp  stream.h  (+8 more)
mordor/common/tests/: buffer.cpp  buffered_stream.cpp  chunked_stream.cpp  common_tests.vcproj  coroutine.cpp  efs_stream.cpp  fiber.cpp  fibers.cpp  hmac.cpp  http.cpp  http_helper.cpp  http_helper.h  iomanager_iocp.cpp  memory_stream.cpp  oauth.cpp  pch.cpp  pipe_stream.cpp  run_tests.cpp  scheduler.cpp  socket.cpp  timer.cpp  uri.cpp
mordor/common/xml/: parser.h  parser.rl
mordor/examples/: .gitignore  CMakeLists.txt  Makefile.am  cat.cpp  cat.vcproj  cat.vcxproj  cat.vcxproj.filters  decodebacktrace.cpp  decodebacktrace.vcxproj  decodebacktrace.vcxproj.filters  echoserver.cpp  echoserver.vcproj  echoserver.vcxproj  echoserver.vcxproj.filters  iombench.cpp  iombench.vcproj  iombench.vcxproj  iombench.vcxproj.filters  memcached_client.cpp  memcached_client.vcproj  netbench.cpp  netbench.h  pch.cpp  simpleappserver.cpp  simpleclient.cpp  simpleclient.vcproj  simpleclient.vcxproj  simpleclient.vcxproj.filters  simplefileserver.cpp  simplehttpfileserver.cpp  simplehttpfileuploadserver.cpp  simplehttpserver.cpp  sslterminator.cpp  tunnel.cpp  tunnel.vcproj  tunnel.vcxproj  tunnel.vcxproj.filters  udpstats.cpp  wget.cpp  wget.vcproj  (+3 more)
mordor/http/: .gitignore  auth.cpp  auth.h  basic.cpp  basic.h  broker.cpp  broker.h  chunked.cpp  chunked.h  client.cpp  client.h  connection.cpp  connection.h  digest.cpp  digest.h  http.cpp  http.h  http_parser.rl  mockserver.cpp  mockserver.h  multipart.cpp  multipart.h  negotiate.cpp  negotiate.h  oauth.cpp  oauth.h  oauth2.cpp  oauth2.h  parser.h  parser.rl  proxy.cpp  proxy.h  server.cpp  server.h  servlet.cpp  servlet.h  tunnel.h
mordor/http/servlets/: config.cpp  config.h
mordor/pq/: connection.cpp  connection.h  connectionpool.cpp  connectionpool.h  copy.cpp  exception.cpp  exception.h  mordorpq.vcxproj  mordorpq.vcxproj.filters  preparedstatement.cpp  preparedstatement.h  result.cpp  result.h  transaction.cpp  transaction.h
mordor/pq/tests/: pq.cpp  pqtests.vcxproj  pqtests.vcxproj.filters
mordor/ssh/: agent.cpp  agent.h  channel.cpp  channel.h  session.cpp  session.h
mordor/streams/: buffer.cpp  buffer.h  buffered.cpp  buffered.h  cat.cpp  cat.h  counter.cpp  counter.h  crypto.cpp  crypto.h  deflate.h  delay.h  duplex.h  efs.cpp  efs.h  fd.cpp  fd.h  file.cpp  file.h  filter.cpp  filter.h  gzip.h  handle.cpp  handle.h  hash.cpp  hash.h  hashfwd.h  http.cpp  http.h  limited.cpp  limited.h  lzma2.cpp  lzma2.h  memory.cpp  memory.h  namedpipe.cpp  namedpipe.h  notify.h  null.cpp  null.h  (+34 more)
mordor/test/: .gitignore  CMakeLists.txt  Makefile.am  antxmllistener.cpp  antxmllistener.h  compoundlistener.cpp  compoundlistener.h  libmordortest.pc.in  mordortest.v12.vcxproj  mordortest.v12.vcxproj.filters  mordortest.vcproj  mordortest.vcxproj  mordortest.vcxproj.filters  stdoutlistener.cpp  stdoutlistener.h  test.cpp  test.h  test.vcproj
mordor/tests/: .gitignore  CMakeLists.txt  Makefile.am  atomic.cpp  buffer.cpp  buffered_stream.cpp  cat_stream.cpp  chunked_stream.cpp  config.cpp  coroutine.cpp  counter_stream.cpp  crypto.cpp  efs_stream.cpp  endian.cpp  fibermutex.cpp  fibers.cpp  fibersync.cpp  file_stream.cpp  fls.cpp  future.cpp  hash_stream.cpp  hmac.cpp  http.cpp  http_client.cpp  http_helper.cpp  http_helper.h  http_parser.cpp  http_proxy.cpp  http_server.cpp  http_servlet_dispatcher.cpp  http_stream.cpp  iomanager.cpp  iomanager_iocp.cpp  json.cpp  log.cpp  memory_stream.cpp  notify_stream.cpp  oauth.cpp  pipe_stream.cpp  pq.cpp  (+26 more)
mordor/xml/: .gitignore  dom_parser.cpp  dom_parser.h  parser.h  parser.rl  xml_parser.rl
(+12 files in other folders)
