SUBDIRS=mordor
ACLOCAL_AMFLAGS=-I m4

nobase_include_HEADERS=			\
	mordor/anymap.h			\
	mordor/assert.h			\
	mordor/atomic.h			\
	mordor/config.h			\
	mordor/coroutine.h		\
	mordor/daemon.h			\
	mordor/date_time.h		\
	mordor/endian.h			\
	mordor/eventloop.h		\
	mordor/exception.h		\
	mordor/fiber.h			\
	mordor/fibersynchronization.h	\
	mordor/future.h			\
	mordor/http/auth.h		\
	mordor/http/basic.h		\
	mordor/http/broker.h		\
	mordor/http/chunked.h		\
	mordor/http/client.h		\
	mordor/http/connection.h	\
	mordor/http/digest.h		\
	mordor/http/http.h		\
	mordor/http/multipart.h		\
	mordor/http/negotiate.h		\
	mordor/http/oauth.h		\
	mordor/http/parser.h		\
	mordor/http/proxy.h		\
	mordor/http/server.h		\
	mordor/iomanager_epoll.h	\
	mordor/iomanager.h		\
	mordor/iomanager_kqueue.h	\
	mordor/json.h			\
	mordor/log.h			\
	mordor/main.h			\
	mordor/parallel.h		\
	mordor/pq.h			\
	mordor/predef.h			\
	mordor/ragel.h			\
	mordor/scheduler.h		\
	mordor/semaphore.h		\
	mordor/sleep.h			\
	mordor/socket.h			\
	mordor/socks.h			\
	mordor/statistics.h		\
	mordor/streams/buffered.h	\
	mordor/streams/buffer.h		\
	mordor/streams/cat.h		\
	mordor/streams/deflate.h	\
	mordor/streams/duplex.h		\
	mordor/streams/fd.h		\
	mordor/streams/file.h		\
	mordor/streams/filter.h		\
	mordor/streams/gzip.h		\
	mordor/streams/hash.h		\
	mordor/streams/http.h		\
	mordor/streams/limited.h	\
	mordor/streams/memory.h		\
	mordor/streams/notify.h		\
	mordor/streams/null.h		\
	mordor/streams/pipe.h		\
	mordor/streams/progress.h	\
	mordor/streams/random.h		\
	mordor/streams/scheduler.h	\
	mordor/streams/singleplex.h	\
	mordor/streams/socket.h		\
	mordor/streams/ssl.h		\
	mordor/streams/std.h		\
	mordor/streams/stream.h		\
	mordor/streams/temp.h		\
	mordor/streams/test.h		\
	mordor/streams/throttle.h	\
	mordor/streams/timeout.h	\
	mordor/streams/transfer.h	\
	mordor/streams/zlib.h		\
	mordor/string.h			\
	mordor/test/antxmllistener.h	\
	mordor/test/stdoutlistener.h	\
	mordor/test/test.h		\
	mordor/thread.h			\
	mordor/thread_local_storage.h	\
	mordor/timer.h			\
	mordor/uri.h			\
	mordor/util.h			\
	mordor/version.h		\
	mordor/workerpool.h		\
	mordor/xml/parser.h		\
	mordor/zip.h
